--- a/styles/style.css
+++ b/styles/style.css
@@ -52,3 +52,22 @@ form {
     font-size: 20px;
     font-weight: bold;
 }
+.header{
+    background:green;
+    color:#fff;
+    padding:1rem 0;
+}
+.link{
+    color: white;
+    text-decoration: none;
+}
+.header-row{
+    display:flex;
+    align-items:center;
+    gap:1rem;
+    text-align: right;
+    font-size: large;
+}
+.form{
+    text-align: center;
+}
